--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,8 @@
     "@headlessui/tailwindcss": "^0.2.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.21",
+    "cssnano": "^7.0.7",
     "framer-motion": "^12.16.0",
     "next": "15.3.3",
     "postcss": "^8.5.4",
